--- a/README
+++ b/README
@@ -4,33 +4,64 @@ Install Anaconda3
 For Linux distros:
 
 Install
-``Anaconda3-2022.05-Linux-x86_64.sh``
+```
+
+Anaconda3-2022.05-Linux-x86_64.sh
+
+```
 
 For Windows download the .exe and follow the install instructions from here:
 
-``https://docs.anaconda.com/anaconda/install/windows/``
+```
+
+https://docs.anaconda.com/anaconda/install/windows/
+
+```
 
 For MacOS download the installer and follow the instructions from here:
 
-``https://docs.anaconda.com/anaconda/install/mac-os/``
+```
+
+https://docs.anaconda.com/anaconda/install/mac-os/
+
+```
 
 Initialize conda
 
-``conda init``
+```
+
+conda init
+
+```
 
 Create a venv
 
-``conda create -n kalman python=3.9``
+```
+
+conda create -n kalman python=3.9
+
+```
 
 Activate the venv
 
-``conda activate kalman``
+```
+
+conda activate kalman
+
+```
 
 Install the requirements
 
-``pip install -r requirements.txt``
+```
+
+pip install -r requirements.txt
+
+```
 
 Run sim.py
 
-``python sim.py``
+```
+python sim.py
+
+```
 
